# Kaine-3D-Rendering-Engine

./: .gitattributes  CMakeLists.txt  readme.md
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/stb_image/: CMakeLists.txt
src/: IndexBuffer.cpp  Mesh.cpp  Primitives.cpp  Renderer.cpp  Textures.cpp  Uniform.cpp  VertexArray.cpp  main.cpp  shader.cpp  util.cpp  vertexbuffer.cpp
src/include/: IndexBuffer.h  Mesh.h  Primitives.h  Renderer.h  Textures.h  Uniform.h  VertexArray.h  shader.h  util.h  vertex.h  vertexbuffer.h
